[metadata]
name = tilapya
version = 1.0.0
author = Carson Lam
author_email = 46059+carsonyl@users.noreply.github.com
description = TransLink Open API, in Python.
long_description = file: README.rst, HISTORY.rst
keywords = vancouver, transit, translink
url = https://github.com/carsonyl/tilapya
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license = Apache License 2.0
license_files =
    LICENSE

[options]
packages = tilapya
python_requires = >=3.5
install_requires =
    requests>=2.20.0,<3.0.0
    marshmallow>=3.0.0rc7,<4.0.0
    pytz

[options.extras_require]
dev = pytest; pytest-cov; pytest-vcr; python-dotenv

[flake8]
exclude = docs
max_line_length = 120
